Add more validations for userId properties.